test/cases/compile_errors/zon/doc_comment.zon
//! Doc comments aren't allowed in ZON
.{}
